# ComputerGraphicsExps

./: .gitignore  .gitmodules  CMakeLists.txt  FindFreeGLUT.cmake
GLTools/: CMakeLists.txt
GLTools/include/: GLBatch.h  GLShaderManager.h  GLTools.h  GLTriangleBatch.h
GLTools/src/: GLTools.cpp
freeglut/lib/: freeglut.lib  freeglut_static.lib  freeglut_staticd.lib  freeglutd.lib
freeglut/lib/pkgconfig/: freeglut.pc
src/: CMakeLists.txt  main.cpp
src/exp1/: main.cpp
src/exp2/: main.cpp
src/exp3/: main.cpp
src/exp4/: main.cpp
src/exp5/: main.cpp
src/exp6/: main.cpp
